# GridlockLondon

./: .gitignore  CMakeLists.txt  README.md
code/: ANALYTICS_IMPLEMENTATION.md  ANALYTICS_QUICK_START.md  BUILD_FIX.md  BUILD_INSTRUCTIONS.md  BUILD_IN_QT_CREATOR_STEPS.md  CMakelists.txt  FIX_BUILD_AND_TEST.md  HOW_TO_BUILD_AND_TEST.md  ISSUE_5_SUMMARY.md  Makefile  QT_CREATOR_BUILD_GUIDE.md  QT_INSTALLATION_GUIDE.md  QUICK_BUILD_AND_TEST.md  QUICK_FIX.md  QUICK_FIX.txt  QUICK_START_TESTING.md  QUICK_TEST_COMMANDS.txt  RUN_ANALYTICS_TESTS.md  RUN_TESTS.md  TEST_COMMANDS.md  TEST_COMMANDS_SIMPLE.txt  TEST_RESULTS.md  build_and_test.sh  check_and_run_analytics_tests.sh  demo_main.cpp  final_verification.py  run_all_tests.sh  run_coverage.sh  run_python_tests.sh  run_tests.sh  test_route_policy_simple.cpp  verify_congestion_policy.py  verify_implementation.cpp  verify_route_planner.py  verify_tests.py
code/adapters/: JsonReader.cpp  JsonReader.h  PresetLoader.cpp  PresetLoader.h  ReportWriter.cpp  ReportWriter.h  TimerService.cpp  TimerService.h
code/analytics/: PolicyEffectivenessAnalyzer.cpp  PolicyEffectivenessAnalyzer.h  PredictiveAnalyzer.cpp  PredictiveAnalyzer.h  ReportExporter.cpp  ReportExporter.h  TrafficFlowAnalyzer.cpp  TrafficFlowAnalyzer.h
code/core/: Agent.cpp  Agent.h  CMakeLists.txt  City.cpp  City.h  CongestionAwarePolicy.cpp  CongestionAwarePolicy.h  Edge.cpp  Edge.h  IRoutePolicy.h  IRoutePolicy.h.gch  Metrics.cpp  Metrics.h  Node.cpp  Node.h  Preset.cpp  Preset.h  RoutePlanner.cpp  RoutePlanner.h  ShortestPathPolicy.cpp  ShortestPathPolicy.h  (+5 more)
(+69 files in other folders)
